moved Translation service to application module, added cache for system translations, changed way of translation merging to enhance performance, fixed edge test