@@ -31,10 +31,9 @@
 package org.thingsboard.server.controller;
 
 import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.hash.Hashing;
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.io.ByteArrayResource;
@@ -48,6 +47,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.thingsboard.common.util.JacksonUtil;
@@ -56,12 +56,9 @@ import org.thingsboard.server.common.data.id.CustomerId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.permission.Operation;
 import org.thingsboard.server.common.data.permission.Resource;
-import org.thingsboard.server.common.data.security.Authority;
 import org.thingsboard.server.common.data.translation.TranslationInfo;
-import org.thingsboard.server.common.data.util.ThrowingSupplier;
 import org.thingsboard.server.config.annotations.ApiOperation;
 import org.thingsboard.server.dao.translation.TranslationCacheKey;
-import org.thingsboard.server.dao.translation.TranslationService;
 import org.thingsboard.server.queue.util.TbCoreComponent;
 import org.thingsboard.server.service.translation.TbTranslationService;
 
@@ -70,7 +67,6 @@ import java.text.DateFormat;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import static org.thingsboard.server.controller.ControllerConstants.MARKDOWN_CODE_BLOCK_END;
 import static org.thingsboard.server.controller.ControllerConstants.MARKDOWN_CODE_BLOCK_START;
@@ -85,50 +81,68 @@ public class TranslationController extends BaseController {
             MARKDOWN_CODE_BLOCK_START +
             "[\n" +
             "  {\n" +
-            "    \"localeCode\": \"it_IT\",\n" +
-            "    \"progress\": 100\n" +
+            "    \"localeCode\": \"uk_UA\",\n" +
+            "    \"language\": \"Ukrainian (українська)\",\n" +
+            "    \"country\": \"Україна\",\n" +
+            "    \"progress\": 32\n" +
             "  },\n" +
             "  {\n" +
-            "    \"localeCode\": \"pl_PL\",\n" +
-            "    \"progress\": 12\n" +
-            "  }\n" +
+            "    \"localeCode\": \"es_ES\",\n" +
+            "    \"language\": \"Spanish (español)\",\n" +
+            "    \"country\": \"España\",\n" +
+            "    \"progress\": 79\n" +
+            "  }" +
             "]" +
             MARKDOWN_CODE_BLOCK_END;
 
     private final TbTranslationService tbTranslationService;
-    private final TranslationService translationService;
 
     @ApiOperation(value = "Get Translation info (getTranslationInfos)",
             notes = "Fetch the list of customized locales and corresponding details such as language display name," +
                     " country display name and translation progress percentage." +
                     "\n\n Response example: " + CUSTOM_TRANSLATION_INFO_EXAMPLE +
-                    ControllerConstants.WL_READ_CHECK
-            , responses = @ApiResponse(content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)))
+                    ControllerConstants.WL_READ_CHECK)
     @PreAuthorize("hasAnyAuthority('SYS_ADMIN', 'TENANT_ADMIN', 'CUSTOMER_USER')")
-    @GetMapping(value = "/translation/info", produces = "application/json")
+    @GetMapping(value = "/translation/info")
     @ResponseBody
     public List<TranslationInfo> getTranslationInfos() throws ThingsboardException {
         checkWhiteLabelingPermissions(Operation.READ);
-        return translationService.getTranslationInfos(getCurrentUser().getTenantId(), getCurrentUser().getCustomerId());
+        return tbTranslationService.getTranslationInfos(getCurrentUser().getTenantId(), getCurrentUser().getCustomerId());
     }
 
-    @ApiOperation(value = "Get list of available system locales (getAvailableLocales)")
+    @ApiOperation(value = "Get list of available system locales (getAvailableLocales)",
+            notes = "The result is map where key is locale code and value is locale language and country")
     @PreAuthorize("hasAnyAuthority('SYS_ADMIN', 'TENANT_ADMIN', 'CUSTOMER_USER')")
-    @GetMapping(value = "/translation/locales", produces = "application/json")
+    @GetMapping(value = "/translation/availableLocales")
     @ResponseBody
-    public List<String> getAvailableLocales() {
-        return Arrays.stream(DateFormat.getAvailableLocales())
-                .map(Locale::toString)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+    public JsonNode getAvailableLocales() {
+        ObjectNode result = JacksonUtil.newObjectNode();
+        List<Locale> availableLocales = Arrays.stream(DateFormat.getAvailableLocales())
+                .filter(availableLocale -> !availableLocale.toString().isBlank() && availableLocale.getScript().isBlank())
+                .toList();
+        for (Locale availableLocale : availableLocales) {
+            String displayLanguage = availableLocale.getDisplayLanguage(availableLocale);
+            String displayCountry = availableLocale.getDisplayCountry(availableLocale).isBlank() ? "" : " (" + availableLocale.getDisplayCountry(availableLocale) + ")";
+            result.put(availableLocale.toString(), displayLanguage + displayCountry);
+        }
+        return result;
+    }
+
+    @ApiOperation(value = "Get system translation for login page",
+            notes = "Fetch the end-user translation for specified locale.")
+    @RequestMapping(value = "/noauth/translation/login/{localeCode}", method = RequestMethod.GET)
+    @ResponseBody
+    public JsonNode getLoginPageTranslation(
+            @Parameter(description = "Locale code (e.g. 'en_US').")
+            @PathVariable("localeCode") String localeCode) {
+        return tbTranslationService.getLoginTranslation(localeCode);
     }
 
     @ApiOperation(value = "Get end-user all-to-one translation (getFullTranslation)",
             notes = "Fetch the end-user translation for specified locale. The result is the merge of user custom translation, " +
-                    "system language translation and default locale translation."
-            , responses = @ApiResponse(content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)))
+                    "system language translation and default locale translation.")
     @PreAuthorize("hasAnyAuthority('SYS_ADMIN', 'TENANT_ADMIN', 'CUSTOMER_USER')")
-    @GetMapping(value = "/translation/full/{localeCode}", produces = "application/json")
+    @GetMapping(value = "/translation/full/{localeCode}")
     @ResponseBody
     public ResponseEntity<JsonNode> getFullTranslation(
             @Parameter(description = "Locale code (e.g. 'en_US').")
@@ -146,7 +160,7 @@ public class TranslationController extends BaseController {
             }
         }
 
-        JsonNode fullTranslation = translationService.getFullTranslation(tenantId, customerId, localeCode);
+        JsonNode fullTranslation = tbTranslationService.getFullTranslation(tenantId, customerId, localeCode);
         String calculatedEtag = calculateTranslationEtag(fullTranslation);
         tbTranslationService.putETag(cacheKey, calculatedEtag);
         return ResponseEntity.ok()
@@ -158,10 +172,9 @@ public class TranslationController extends BaseController {
 
     @ApiOperation(value = "Download end-user all-to-one translation (downloadFullTranslation)",
             notes = "Fetch the end-user translation for the specified locale. The result is a json file with merged user custom translation, " +
-                    "system language translation and default locale translation."
-            , responses = @ApiResponse(content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE)))
+                    "system language translation and default locale translation.")
     @PreAuthorize("hasAnyAuthority('SYS_ADMIN', 'TENANT_ADMIN', 'CUSTOMER_USER')")
-    @GetMapping(value = "/translation/full/{localeCode}/download", produces = "application/json")
+    @GetMapping(value = "/translation/full/{localeCode}/download")
     @ResponseBody
     public ResponseEntity<ByteArrayResource> downloadFullTranslation(@Parameter(description = "Locale code (e.g. 'en_US').")
                                                                      @PathVariable("localeCode") String localeCode) throws Exception {
@@ -169,7 +182,7 @@ public class TranslationController extends BaseController {
         TenantId tenantId = getCurrentUser().getTenantId();
         CustomerId customerId = getCurrentUser().getCustomerId();
 
-        JsonNode fullSystemTranslation = checkNotNull(translationService.getFullTranslation(tenantId, customerId, localeCode));
+        JsonNode fullSystemTranslation = checkNotNull(tbTranslationService.getFullTranslation(tenantId, customerId, localeCode));
 
         String fileName = localeCode + "_custom_translation.json";
         ByteArrayResource translation = new ByteArrayResource(fullSystemTranslation.toString().getBytes());
